# ghostwriter-openenv

./: Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py
