[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "ghostwriter_pro"
version = "1.0.0"
description = "Professional tone alignment environment for OpenEnv"
dependencies = [
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "openenv-core"
]

[project.scripts]
# This maps the command 'server' to the main function in server/app.py
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
